fixed im flexible button on iphone.

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -183,7 +183,7 @@
 }
 
 .btn.imFlexibleButton {
-    height: 88px;
+    height: 90px;
     width: 180px;
     font-size: 23px;
     border-radius: 44px;
@@ -244,8 +244,10 @@
 }
     } 
 
-@media only screen and (max-width: 1245px) {
-     .landingPageBigImageAndButtonContainer {
+@media only screen 
+        and (max-width: 1245px)
+        and (max-height: 1085px) {
+    .landingPageBigImageAndButtonContainer {
     width: 89%;
     padding: 0;
     height: 850px;
